1.3.15.dev0
 * #209: Bypass Borg error about a moved repository via "relocated_repo_access_is_ok" option in
   borgmatic storage configuration section.

1.3.14
 * #204: Do not treat Borg warnings (exit code 1) as failures.
 * When validating configuration files, require strings instead of allowing any scalar type.

1.3.13
 * #199: Add note to documentation about using spaces instead of tabs for indentation, as YAML does
   not allow tabs.
 * #203: Fix compatibility with ruamel.yaml 0.16.x.
 * If a "prefix" option in borgmatic's configuration has an empty value (blank or ""), then disable
   default prefix.

1.3.12
 * Only log to syslog when run from a non-interactive console (e.g. a cron job).
 * Remove unicode byte order mark from syslog output so it doesn't show up as a literal in rsyslog
   output. See discussion on #197.

1.3.11
 * #193: Pass through several "borg list" and "borg info" flags like --short, --format, --sort-by,
   --first, --last, etc. via borgmatic command-line flags.
 * Add borgmatic info --repository and --archive command-line flags to display info for individual
   repositories or archives.
 * Support for Borg --noatime, --noctime, and --nobirthtime flags via corresponding options in
   borgmatic configuration location section.

1.3.10
 * #198: Fix for Borg create error output not showing up at borgmatic verbosity level zero.

1.3.9
 * #195: Switch to command-line actions as more traditional sub-commands, e.g. "borgmatic create",
   "borgmatic prune", etc. However, the classic dashed options like "--create" still work!

1.3.8
 * #191: Disable console color via "color" option in borgmatic configuration output section.

1.3.7
 * #196: Fix for unclear error message for invalid YAML merge include.
 * #197: Don't color syslog output.
 * Change default syslog verbosity to show errors only.

1.3.6
 * #53: Log to syslog in addition to existing console logging. Add --syslog-verbosity flag to